[tool.poetry]
name = "libra2-sdk"
version = "0.11.0"
description = "Libra2 SDK"
authors = ["Libra2 Research <opensource@libra2.org>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/libra2org/libra2-python-sdk"
homepage = "https://libra2.org"
keywords = ["web3", "sdk", "libra2", "blockchain"]

[tool.setuptools.package-data]
"libra2-sdk" = ["py.typed"]

[tool.poetry.dependencies]
ecdsa = "0.19.1"
python-graphql-client = "^0.4.3"
httpx = {extras = ["http2"], version = "^0.28.0"}
PyNaCl = "^1.5.0"
python = ">=3.9.0"
tomli = "^2.2.1"
typing-extensions = "^4.15.0"
behave = "^1.2.6"
types-six = "^1.17.0.20250515"
h11 = "^0.16.0"
multidict = "^6.6.4"
# These below are to fix security vulnerabilities in dependencies
h2 = "^4.3.0"
urllib3 = "^2.5.0"
requests = "^2.32.5"
aiohttp = "^3.12.14"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^24.10.0"
coverage = "^7.6.12"
flake8 = "^7.2.0"
isort = "^5.13.2"
mypy = "^1.16.0"
mypy-extensions = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
